--- a/src/i18n/ar/about.json
+++ b/src/i18n/ar/about.json
@@ -8,6 +8,7 @@
   "yearsExperience": "سنوات من الخبرة",
   "successfulProjects": "مشاريع ناجحة",
   "clientSatisfaction": "رضا العملاء",
+  "ourTeam": "فريقنا",
   "teamMembers": [
     {
       "name": "علي رضائي",
