--- a/src/i18n/ar/common.json
+++ b/src/i18n/ar/common.json
@@ -38,5 +38,13 @@
   "oldestFirst": "الأقدم أولاً",
   "resetFilters": "إعادة ضبط التصفية",
   "noResults": "لم يتم العثور على نتائج",
-  "tryAgain": "حاول مرة أخرى"
+  "tryAgain": "حاول مرة أخرى",
+  "footer.aboutCompany": "عن WebABC: نحن وكالة تسويق رقمي وتطوير مواقع.",
+  "footer.services": "الخدمات",
+  "footer.company": "الشركة",
+  "footer.resources": "الموارد",
+  "footer.companySince": "منذ 2012",
+  "footer.privacyPolicy": "سياسة الخصوصية",
+  "footer.termsOfService": "شروط الخدمة",
+  "footer.cookiePolicy": "سياسة الكوكيز"
 }
