--- a/src/i18n/ar/services.json
+++ b/src/i18n/ar/services.json
@@ -84,6 +84,7 @@
   "seoDescription": "تحسين ترتيب موقعك الإلكتروني",
   "localSeoTitle": "تحسين محركات البحث المحلية",
   "localSeoDescription": "التفوق في عمليات البحث المحلية",
+  "webDesignTitle": "خدمات تصميم المواقع",
   "webDevTitle": "تطوير الويب",
   "webDevDescription": "حلول ويب مخصصة",
   "faqTitle": "إجابات على أسئلتك الشائعة",
