--- a/src/i18n/en/about.json
+++ b/src/i18n/en/about.json
@@ -8,6 +8,7 @@
   "yearsExperience": "Years of Experience",
   "successfulProjects": "Successful Projects",
   "clientSatisfaction": "Client Satisfaction",
+  "ourTeam": "Our Team",
   "teamMembers": [
     {
       "name": "Ali Rezaei",
