--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -38,5 +38,13 @@
   "oldestFirst": "Oldest first",
   "resetFilters": "Reset filters",
   "noResults": "No results found",
-  "tryAgain": "Try Again"
+  "tryAgain": "Try Again",
+  "footer.aboutCompany": "About WebABC: We are a digital marketing and web development agency.",
+  "footer.services": "Services",
+  "footer.company": "Company",
+  "footer.resources": "Resources",
+  "footer.companySince": "Since 2012",
+  "footer.privacyPolicy": "Privacy Policy",
+  "footer.termsOfService": "Terms of Service",
+  "footer.cookiePolicy": "Cookie Policy"
 }
