--- a/src/i18n/en/services.json
+++ b/src/i18n/en/services.json
@@ -84,6 +84,7 @@
   "seoDescription": "Improve your website ranking",
   "localSeoTitle": "Local SEO",
   "localSeoDescription": "Excel in local searches",
+  "webDesignTitle": "Website Design Services",
   "webDevTitle": "Web Development",
   "webDevDescription": "Custom web solutions",
   "faqTitle": "Answers to Your Frequently Asked Questions",
