--- a/src/i18n/en/wordpress.json
+++ b/src/i18n/en/wordpress.json
@@ -28,5 +28,6 @@
   "ecommerceSetup": "E-commerce Setup",
   "performanceOptimization": "Performance Optimization",
   "maintenanceSupport": "Maintenance & Support",
-  "seoOptimization": "SEO Optimization"
+  "seoOptimization": "SEO Optimization",
+  "contentCreation": "Content Creation"
 }
