--- a/src/i18n/fa/about.json
+++ b/src/i18n/fa/about.json
@@ -8,6 +8,7 @@
   "yearsExperience": "سال تجربه",
   "successfulProjects": "پروژه موفق",
   "clientSatisfaction": "رضایت مشتری",
+  "ourTeam": "تیم ما",
   "teamMembers": [
     {
       "name": "علی رضایی",
