--- a/src/i18n/fa/services.json
+++ b/src/i18n/fa/services.json
@@ -84,6 +84,7 @@
   "seoDescription": "بهبود رتبه وب‌سایت شما",
   "localSeoTitle": "سئو محلی",
   "localSeoDescription": "برتری در جستجوهای محلی",
+  "webDesignTitle": "خدمات طراحی سایت",
   "webDevTitle": "توسعه وب",
   "webDevDescription": "راهکارهای سفارشی وب",
   "faqTitle": "پاسخ به سوالات متداول شما",
