--- a/src/i18n/fa/wordpress.json
+++ b/src/i18n/fa/wordpress.json
@@ -28,5 +28,6 @@
   "ecommerceSetup": "راه‌اندازی فروشگاه",
   "performanceOptimization": "بهینه‌سازی عملکرد",
   "maintenanceSupport": "نگهداری و پشتیبانی",
-  "seoOptimization": "بهینه‌سازی سئو"
+  "seoOptimization": "بهینه‌سازی سئو",
+  "contentCreation": "تولید محتوا"
 }
