--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -1,7 +1,6 @@
 
 {
   "home": "خانه",
-  "services": "خدمات",
   "portfolio": "نمونه‌کارها",
   "caseStudies": "مطالعات موردی",
   "about": "درباره ما",
@@ -39,12 +38,12 @@
   "resetFilters": "بازنشانی فیلترها",
   "noResults": "نتیجه‌ای یافت نشد",
   "tryAgain": "تلاش مجدد",
-  "footer.aboutCompany": "درباره WebABC: ما یک آژانس بازاریابی دیجیتال و توسعه وب هستیم.",
-  "footer.services": "خدمات",
-  "footer.company": "شرکت",
-  "footer.resources": "منابع",
-  "footer.companySince": "از سال ۲۰۱۲",
-  "footer.privacyPolicy": "سیاست حفظ حریم خصوصی",
-  "footer.termsOfService": "شرایط استفاده",
-  "footer.cookiePolicy": "سیاست کوکی"
+  "aboutCompany": "درباره WebABC: ما یک آژانس بازاریابی دیجیتال و توسعه وب هستیم.",
+  "services": "خدمات",
+  "company": "شرکت",
+  "resources": "منابع",
+  "companySince": "از سال ۲۰۱۲",
+  "privacyPolicy": "سیاست حفظ حریم خصوصی",
+  "termsOfService": "شرایط استفاده",
+  "cookiePolicy": "سیاست کوکی"
 }
