--- a/src/i18n/ar/seo.json
+++ b/src/i18n/ar/seo.json
@@ -20,5 +20,51 @@
   "wordpressTitle": "تطوير ووردبريس وووكومرس | ويب إيه بي سي",
   "wordpressDescription": "خدمات تطوير ووردبريس وووكومرس الخبيرة من ويب إيه بي سي. احصل على مواقع ومتاجر إلكترونية مخصصة بتصميم فريد وأداء مثالي.",
   "localSEOTitle": "خدمات تحسين محركات البحث المحلية | عزز وجودك المحلي | ويب إيه بي سي",
-  "localSEODescription": "تساعد خدمات تحسين محركات البحث المحلية من ويب إيه بي سي عملك على السيطرة على نتائج البحث المحلية وجذب المزيد من العملاء من منطقتك."
+  "localSEODescription": "تساعد خدمات تحسين محركات البحث المحلية من ويب إيه بي سي عملك على السيطرة على نتائج البحث المحلية وجذب المزيد من العملاء من منطقتك.",
+  "title": "خدمات احترافية لتحسين محركات البحث",
+  "subtitle": "عزز ظهور موقعك وترتيبه من خلال استراتيجيات تحسين محركات البحث الخبيرة لدينا",
+  "onPageSeo": "تحسين الصفحة الداخلية",
+  "offPageSeo": "تحسين خارج الصفحة",
+  "technicalSeo": "تحسين محركات البحث التقني",
+  "contentStrategy": "استراتيجية المحتوى",
+  "keywordResearch": "بحث الكلمات المفتاحية",
+  "competitorAnalysis": "تحليل المنافسين",
+  "localSeo": "تحسين محركات البحث المحلية",
+  "ecommerceSeo": "تحسين محركات البحث للتجارة الإلكترونية",
+  "seoAudit": "تدقيق تحسين محركات البحث",
+  "monthlyReporting": "تقارير شهرية",
+  "linkBuilding": "بناء الروابط",
+  "conversionOptimization": "تحسين معدل التحويل",
+  "specializedSEO": "تحسين محركات البحث المتخصص",
+  "technicalSeoDesc": "تحسين تقني لموقعك لتحسين الأداء وزيادة الترتيب في محركات البحث",
+  "contentStrategyDesc": "إنتاج وتحسين المحتوى عالي الجودة الذي يجذب كلاً من المستخدمين ومحركات البحث",
+  "localSeoDesc": "زيادة ظهور عملك في عمليات البحث المحلية ونتائج خرائط جوجل",
+  "offPageSeoDesc": "إنشاء ملف تعريف روابط قوي باستراتيجية بناء روابط منهجية وطبيعية",
+  "feature": {
+    "pageSpeed": "تحسين سرعة تحميل الصفحة",
+    "technicalErrors": "إصلاح الأخطاء التقنية ومشكلات الزحف",
+    "urlStructure": "تحسين بنية URL وهيكل الموقع",
+    "schema": "تنفيذ Schema Markup والبيانات المنظمة",
+    "mobileFriendly": "تحسين للجوال والتصميم المتجاوب",
+    "security": "تحسين الأمان وأداء الخادم",
+    "keywordResearch": "بحث متخصص عن الكلمات المفتاحية",
+    "qualityContent": "إنتاج محتوى أصلي وقيم",
+    "titleOptimization": "تحسين العناوين والعلامات الوصفية",
+    "headings": "هيكلة المحتوى باستخدام علامات H1 إلى H6",
+    "imageOptimization": "تحسين الصور والوسائط",
+    "longTermStrategy": "إنشاء استراتيجية محتوى طويلة المدى",
+    "gmb": "تحسين ملف Google My Business",
+    "reviews": "إدارة التقييمات والتصنيفات المحلية",
+    "localKeywords": "تحسين المحتوى للكلمات المفتاحية المحلية",
+    "localLinks": "إنشاء روابط محلية عالية الجودة",
+    "nearMe": "التحسين لعمليات البحث \"بالقرب مني\"",
+    "localReports": "تقارير تحليلية لتحسين محركات البحث المحلية",
+    "linkProfile": "تحليل ملف الروابط الحالي",
+    "linkOpportunities": "تحديد فرص بناء روابط عالية الجودة",
+    "linkableContent": "إنتاج محتوى قابل للربط",
+    "authorityLinks": "بناء روابط من مواقع موثوقة ذات صلة",
+    "toxicLinks": "مراقبة وتحييد الروابط الضارة",
+    "progressReports": "تقارير دورية للتقدم"
+  }
+
 }
