--- a/src/i18n/en/seo.json
+++ b/src/i18n/en/seo.json
@@ -1,4 +1,3 @@
-
 {
   "defaultTitle": "WebABC | Web Design and SEO Services",
   "defaultDescription": "WebABC web design and SEO services company | Digital marketing solutions",
@@ -20,5 +19,50 @@
   "wordpressTitle": "WordPress & WooCommerce Development | WebABC",
   "wordpressDescription": "Expert WordPress and WooCommerce development services by WebABC. Get custom websites and online stores with unique design and optimal performance.",
   "localSEOTitle": "Local SEO Services | Boost Your Local Presence | WebABC",
-  "localSEODescription": "WebABC's local SEO services help your business dominate local search results and attract more customers from your area."
+  "localSEODescription": "WebABC's local SEO services help your business dominate local search results and attract more customers from your area.",
+  "title": "Professional SEO Services",
+  "subtitle": "Boost your website's visibility and rankings with our expert SEO strategies",
+  "onPageSeo": "On-Page SEO",
+  "offPageSeo": "Off-Page SEO",
+  "technicalSeo": "Technical SEO",
+  "contentStrategy": "Content Strategy",
+  "keywordResearch": "Keyword Research",
+  "competitorAnalysis": "Competitor Analysis",
+  "localSeo": "Local SEO",
+  "ecommerceSeo": "E-commerce SEO",
+  "seoAudit": "SEO Audit",
+  "monthlyReporting": "Monthly Reporting",
+  "linkBuilding": "Link Building",
+  "conversionOptimization": "Conversion Optimization",
+  "specializedSEO": "Specialized SEO",
+  "technicalSeoDesc": "Technical optimization of your website to improve performance and increase ranking in search engines",
+  "contentStrategyDesc": "Production and optimization of quality content that is attractive to both users and search engines",
+  "localSeoDesc": "Increase your business visibility in local searches and Google Maps results",
+  "offPageSeoDesc": "Creating a powerful link profile with principled and natural link building strategy",
+  "feature": {
+    "pageSpeed": "Page load speed optimization",
+    "technicalErrors": "Technical error fixing and crawling issues",
+    "urlStructure": "URL structure and site architecture optimization",
+    "schema": "Schema Markup and structured data implementation",
+    "mobileFriendly": "Mobile optimization and responsive design",
+    "security": "Security and server performance improvement",
+    "keywordResearch": "Specialized keyword research",
+    "qualityContent": "Production of original and valuable content",
+    "titleOptimization": "Title and meta tag optimization",
+    "headings": "Content structuring using H1 to H6 tags",
+    "imageOptimization": "Image and media optimization",
+    "longTermStrategy": "Creation of long-term content strategy",
+    "gmb": "Google My Business profile optimization",
+    "reviews": "Local review and rating management",
+    "localKeywords": "Content optimization for local keywords",
+    "localLinks": "Creation of quality local links",
+    "nearMe": "Optimization for 'near me' searches",
+    "localReports": "Local SEO analytical reports",
+    "linkProfile": "Current link profile analysis",
+    "linkOpportunities": "Identification of quality link building opportunities",
+    "linkableContent": "Production of linkable content",
+    "authorityLinks": "Link building from relevant authoritative sites",
+    "toxicLinks": "Monitoring and neutralizing toxic links",
+    "progressReports": "Regular progress reports"
+  }
 }
