remove team from about page

--- a/src/i18n/ar/about.json
+++ b/src/i18n/ar/about.json
@@ -7,23 +7,5 @@
   "team": "فريقنا",
   "yearsExperience": "سنوات من الخبرة",
   "successfulProjects": "مشاريع ناجحة",
-  "clientSatisfaction": "رضا العملاء",
-  "ourTeam": "فريقنا",
-  "teamMembers": [
-    {
-      "name": "علي رضائي",
-      "role": "مطور رئيسي",
-      "bio": "مع أكثر من 8 سنوات من الخبرة في تطوير الويب، أتقن علي أطر العمل الحديثة ويقود فريقنا التقني."
-    },
-    {
-      "name": "مريم أحمدي",
-      "role": "أخصائية تحسين محركات البحث",
-      "bio": "متخصصة معتمدة من جوجل مع خبرة في تحسين محركات البحث التقني واستراتيجية المحتوى. ساعدت أكثر من 100 شركة في تحسين رؤيتهم عبر الإنترنت."
-    },
-    {
-      "name": "محمد كريمي",
-      "role": "مصمم واجهة المستخدم",
-      "bio": "مصمم حائز على جوائز مع شغف لإنشاء واجهات مستخدم جميلة وعملية تجذب الزوار وتحولهم إلى عملاء."
-    }
-  ]
+  "clientSatisfaction": "رضا العملاء"
 }
