--- a/src/i18n/fa/about.json
+++ b/src/i18n/fa/about.json
@@ -7,23 +7,5 @@
   "team": "تیم ما",
   "yearsExperience": "سال تجربه",
   "successfulProjects": "پروژه موفق",
-  "clientSatisfaction": "رضایت مشتری",
-  "ourTeam": "تیم ما",
-  "teamMembers": [
-    {
-      "name": "علی رضایی",
-      "role": "توسعه دهنده ارشد",
-      "bio": "با بیش از ۸ سال تجربه در توسعه وب، علی در فریم‌ورک‌های مدرن مهارت یافته و تیم فنی ما را رهبری می‌کند."
-    },
-    {
-      "name": "مریم احمدی",
-      "role": "متخصص سئو",
-      "bio": "متخصص گواهی‌شده گوگل با تخصص در سئو فنی و استراتژی محتوا. او به بیش از ۱۰۰ کسب‌وکار کمک کرده تا حضور آنلاین خود را بهبود بخشند."
-    },
-    {
-      "name": "محمد کریمی",
-      "role": "طراح رابط کاربری",
-      "bio": "طراح برنده جایزه با اشتیاق برای ایجاد رابط‌های کاربری زیبا و کاربردی که بازدیدکنندگان را جذب و به مشتری تبدیل می‌کند."
-    }
-  ]
+  "clientSatisfaction": "رضایت مشتری"
 }
