Add Breadcrumb component and update SEO schemas
Introduces a reusable Breadcrumb component for navigation and schema markup. Updates sitemap files and robots.txt to use the correct domain and adds new URLs. Enhances SEOHead with improved robots meta tag, updates English SEO translations, and adds WebSite/WebPage schema generators. Removes breadcrumb schema from About and Services pages, using the new Breadcrumb component instead. PortfolioGallery now uses CSS animations instead of framer-motion.

--- a/src/i18n/en/seo.json
+++ b/src/i18n/en/seo.json
@@ -1,6 +1,6 @@
 {
   "defaultTitle": "WebABC | Web Design and SEO Services",
-  "defaultDescription": "WebABC web design and SEO services company | Digital marketing solutions",
+  "defaultDescription": "🚀 Boost your online presence with WebABC's expert web design & SEO services. Get 300% more traffic, higher rankings & increased conversions. Free consultation!",
   "author": "WebABC",
   "siteName": "WebABC",
   "keywords": "web design, SEO, search engine optimization, digital marketing, web development, WordPress",
@@ -9,17 +9,17 @@
   "aboutUsTitle": "About WebABC | Professional Web & SEO Agency",
   "aboutUsDescription": "Learn about WebABC, a leading web design and SEO services agency with over 10 years of experience in digital marketing solutions.",
   "servicesTitle": "Our Professional Web & SEO Services | WebABC",
-  "servicesDescription": "Explore WebABC's comprehensive web design, SEO, and digital marketing services tailored to boost your online presence and business growth.",
+  "servicesDescription": "💪 Transform your business with WebABC's expert SEO & web design services. Increase traffic by 300%, improve rankings & boost conversions. Custom solutions for every budget!",
   "portfolioTitle": "WebABC Portfolio | Our Successful Projects",
   "portfolioDescription": "Browse through WebABC's portfolio showcasing our successful web design and SEO projects for various industries.",
   "seoServicesTitle": "Professional SEO Services | WebABC",
-  "seoServicesDescription": "WebABC offers expert SEO services that improve your website's visibility and rankings in search engines. Get a customized SEO strategy now.",
+  "seoServicesDescription": "🎯 Skyrocket your rankings with WebABC's proven SEO services! Get first page results in 90 days, 300% more organic traffic & higher conversions. Free SEO audit included!",
   "webDevTitle": "Professional Web Development Services | WebABC",
-  "webDevDescription": "WebABC provides custom web development services with modern technologies to create high-performing, responsive websites for your business.",
+  "webDevDescription": "⚡ Build stunning websites with WebABC's expert developers! Fast, responsive & conversion-optimized sites using React, Next.js & modern tech. 50% faster loading times guaranteed!",
   "wordpressTitle": "WordPress & WooCommerce Development | WebABC",
   "wordpressDescription": "Expert WordPress and WooCommerce development services by WebABC. Get custom websites and online stores with unique design and optimal performance.",
   "localSEOTitle": "Local SEO Services | Boost Your Local Presence | WebABC",
-  "localSEODescription": "WebABC's local SEO services help your business dominate local search results and attract more customers from your area.",
+  "localSEODescription": "📍 Dominate local searches with WebABC's proven local SEO! Get found by 500% more local customers, top 3 Google Maps rankings & more foot traffic. Free local SEO audit!",
   "title": "Professional SEO Services",
   "subtitle": "Boost your website's visibility and rankings with our expert SEO strategies",
   "onPageSeo": "On-Page SEO",
