--- a/src/i18n/en/about.json
+++ b/src/i18n/en/about.json
@@ -5,6 +5,7 @@
   "mission": "Our Mission",
   "missionText": "At WebABC, we guide businesses through their digital transformation journey with our expert team and up-to-date knowledge. Our main goal is to create lasting value for our clients through innovative and results-oriented solutions.",
   "team": "Our Team",
+  "ourTeam": "Our Team",
   "yearsExperience": "Years of Experience",
   "successfulProjects": "Successful Projects",
   "clientSatisfaction": "Client Satisfaction"
