--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -16,6 +16,7 @@
   "sendEmail": "ارسال ایمیل",
   "readMore": "بیشتر بخوانید",
   "backToPortfolio": "بازگشت به نمونه‌کارها",
+  "backToBlog": "بازگشت به وبلاگ",
   "viewWebsite": "مشاهده وب‌سایت",
   "whatsappMessage": "سلام، من از وب‌سایت شما با شما تماس می‌گیرم و می‌خواهم اطلاعات بیشتری دریافت کنم.",
   "notFound": {
@@ -38,6 +39,7 @@
   "noResults": "نتیجه‌ای یافت نشد",
   "tryAgain": "تلاش مجدد",
   "aboutCompany": "درباره WebABC: ما یک آژانس بازاریابی دیجیتال و توسعه وب هستیم.",
+  "blog": "وبلاگ",
   "services": "خدمات",
   "company": "شرکت",
   "resources": "منابع",
