--- a/src/i18n/fa/about.json
+++ b/src/i18n/fa/about.json
@@ -5,6 +5,7 @@
   "mission": "ماموریت ما",
   "missionText": "در وب اِی‌بی‌سی، ما کسب‌وکارها را در مسیر تحول دیجیتال با تیم متخصص و دانش به‌روز هدایت می‌کنیم. هدف اصلی ما ایجاد ارزش پایدار برای مشتریان خود از طریق راهکارهای نوآورانه و نتیجه‌محور است.",
   "team": "تیم ما",
+  "ourTeam": "تیم ما",
   "yearsExperience": "سال تجربه",
   "successfulProjects": "پروژه موفق",
   "clientSatisfaction": "رضایت مشتری"
