--- a/src/i18n/ar/cta.json
+++ b/src/i18n/ar/cta.json
@@ -10,5 +10,5 @@
   "email": "البريد الإلكتروني",
   "addressValue": "١٢٣ الشارع الرئيسي، القاهرة، مصر",
   "phoneValue": "+20 2 1234 5678",
-  "emailValue": "info@webabc.com.eg"
+  "emailValue": "info@webabc.ir.eg"
 }
