--- a/src/i18n/fa/contact.json
+++ b/src/i18n/fa/contact.json
@@ -19,7 +19,7 @@
   "phone": "تلفن",
   "phoneValue": "۰۲۱-۱۲۳۴۵۶۷۸",
   "email": "ایمیل",
-  "emailValue": "info@webabc.com",
+  "emailValue": "info@webabc.ir",
   "consultation": {
     "title": "درخواست مشاوره رایگان",
     "description": "فرم زیر را پر کنید و کارشناسان ما به زودی با شما تماس خواهند گرفت.",
