--- a/src/i18n/fa/cta.json
+++ b/src/i18n/fa/cta.json
@@ -9,6 +9,6 @@
   "phone": "تلفن",
   "email": "ایمیل",
   "addressValue": "تهران، خیابان ولیعصر، پلاک ۱۵۶",
-  "phoneValue": "۰۲۱-۱۲۳۴۵۶۷۸",
+  "phoneValue": "09125811880",
   "emailValue": "info@webabc.ir"
 }
