--- a/src/i18n/en/contact.json
+++ b/src/i18n/en/contact.json
@@ -19,7 +19,7 @@
   "phone": "Phone",
   "phoneValue": "+1 (555) 123-4567",
   "email": "Email",
-  "emailValue": "info@webabc.com",
+  "emailValue": "info@webabc.ir",
   "consultation": {
     "title": "Request Free Consultation",
     "description": "Fill in the form below and our experts will contact you shortly.",
