--- a/src/i18n/en/cta.json
+++ b/src/i18n/en/cta.json
@@ -8,7 +8,7 @@
   "address": "Address",
   "phone": "Phone",
   "email": "Email",
-  "addressValue": "123 Main Street, New York, NY 10001",
-  "phoneValue": "+1 (555) 123-4567",
-  "emailValue": "info@webabc.com"
+  "addressValue": "989125811880",
+  "phoneValue": "+98 (912) 581-1880",
+  "emailValue": "info@webabc.ir"
 }
