add / update translation

--- a/src/i18n/ar/about.json
+++ b/src/i18n/ar/about.json
@@ -1,12 +1,23 @@
 
 {
-  "title": "عن ويب إيه بي سي",
+  "title": "عن ويب اِي‌بی‌سی",
   "subtitle": "الريادة في التسويق الرقمي وتطوير الويب مع أكثر من عقد من الخبرة الناجحة",
   "mission": "مهمتنا",
-  "missionText": "في ويب إيه بي سي، نرشد الشركات خلال رحلة التحول الرقمي مع فريق الخبراء والمعرفة المحدثة. هدفنا الرئيسي هو خلق قيمة دائمة لعملائنا من خلال الحلول المبتكرة والموجهة نحو النتائج.",
+  "missionText": "في ويب اِي‌بی‌سی، نهدي الشركات خلال رحلة التحول الرقمي مع فريقنا المتخصص ومعرفتنا المحدثة. هدفنا الرئيسي هو خلق قيمة دائمة لعملائنا من خلال الحلول المبتكرة والموجهة نحو النتائج.",
   "team": "فريقنا",
   "ourTeam": "فريقنا",
   "yearsExperience": "سنوات من الخبرة",
   "successfulProjects": "مشاريع ناجحة",
-  "clientSatisfaction": "رضا العملاء"
+  "clientSatisfaction": "رضا العملاء",
+  "stats": {
+    "years": {
+      "value": "10+"
+    },
+    "projects": {
+      "value": "500+"
+    },
+    "satisfaction": {
+      "value": "98%"
+    }
+  }
 }
