intial next js migration

--- a/src/i18n/en/seo.json
+++ b/src/i18n/en/seo.json
@@ -23,7 +23,12 @@
   "serviceAreasTitle": "Our Service Areas | Professional Web Design & SEO Services | WebABC",
   "serviceAreasDescription": "WebABC provides expert web design, development, and SEO services across multiple locations including Muscat, Dubai, Tehran, and Qazvin. Customized digital solutions for your local market.",
   "title": "Professional SEO Services",
+  "description": "Professional search engine optimization services to improve your website's visibility and ranking",
   "subtitle": "Boost your website's visibility and rankings with our expert SEO strategies",
+  "technical": "Technical",
+  "local": "Local SEO",
+  "speedOptimization": "Site Speed Optimization",
+  "speedOptimizationDesc": "Optimize page loading times for better user experience and search rankings.",
   "onPageSeo": "On-Page SEO",
   "offPageSeo": "Off-Page SEO",
   "technicalSeo": "Technical SEO",
