--- a/src/i18n/fa/seo.json
+++ b/src/i18n/fa/seo.json
@@ -24,7 +24,12 @@
   "serviceAreasTitle": "مناطق خدمات ما | خدمات حرفه‌ای طراحی وب و سئو | وب اِی‌بی‌سی",
   "serviceAreasDescription": "وب اِی‌بی‌سی خدمات تخصصی طراحی وب، توسعه و سئو را در مکان‌های متعدد از جمله مسقط، دبی، تهران و قزوین ارائه می‌دهد. راهکارهای دیجیتال سفارشی برای بازار محلی شما.",
   "title": "خدمات حرفه‌ای سئو",
+  "description": "خدمات حرفه‌ای بهینه‌سازی موتور جستجو برای بهبود دید و رتبه وب‌سایت شما",
   "subtitle": "افزایش دید و رتبه وب‌سایت خود با استراتژی‌های تخصصی سئو ما",
+  "technical": "فنی",
+  "local": "سئو محلی",
+  "speedOptimization": "بهینه‌سازی سرعت سایت",
+  "speedOptimizationDesc": "بهینه‌سازی زمان بارگذاری صفحات برای تجربه کاربری بهتر و رتبه‌بندی جستجو",
   "onPageSeo": "سئو داخلی",
   "offPageSeo": "سئو خارجی",
   "technicalSeo": "سئو فنی",
