migration from react to next js

--- a/src/i18n/en/contact.json
+++ b/src/i18n/en/contact.json
@@ -44,5 +44,7 @@
     "projectType": "Project type",
     "budget": "Budget range",
     "deadline": "Project deadline"
-  }
+  },
+  "title": "Contact Us",
+  "description": "Get in touch with us for your web development needs"
 }
