--- a/src/i18n/fa/contact.json
+++ b/src/i18n/fa/contact.json
@@ -44,5 +44,7 @@
     "projectType": "نوع پروژه",
     "budget": "محدوده بودجه",
     "deadline": "مهلت پروژه"
-  }
+  },
+  "title": "تماس با ما",
+  "description": "برای نیازهای توسعه وب خود با ما تماس بگیرید"
 }
