--- a/src/i18n/fa/web-development-services.json
+++ b/src/i18n/fa/web-development-services.json
@@ -18,5 +18,21 @@
   "feature.database": "طراحی و مدیریت پایگاه داده",
   "feature.auth": "احراز هویت و مجوز",
   "feature.cloudIntegration": "یکپارچه‌سازی با فضای ابری",
-  "keywords": "توسعه وب, خدمات, react, nextjs"
+  "keywords": "توسعه وب, خدمات, react, nextjs",
+  "webDev": {
+    "title": "خدمات توسعه وب",
+    "description": "خدمات حرفه‌ای توسعه وب با استفاده از فن‌آوری‌های مدرن و بهترین روش‌ها",
+    "customSites": "توسعه وب‌سایت سفارشی",
+    "customDesc": "وب‌سایت‌های سفارشی ساخته شده با چارچوب‌های مدرن و طراحی پاسخگو",
+    "ecommerce": "راهکارهای تجارت الکترونیک",
+    "ecommerceDesc": "فروشگاه‌های آنلاین با یکپارچه‌سازی پرداخت و مدیریت موجودی",
+    "cms": "سیستم‌های مدیریت محتوا",
+    "cmsDesc": "پلتفرم‌های CMS کاربرپسند برای مدیریت محتوا",
+    "api": "توسعه API",
+    "apiDesc": "APIهای RESTful و سرویس‌های سمت سرور",
+    "performance": "بهینه‌سازی عملکرد",
+    "performanceDesc": "وب‌سایت‌های سریع بارگذاری با عملکرد بهینه",
+    "maintenance": "نگهداری وب‌سایت",
+    "maintenanceDesc": "پشتیبانی مداوم و به‌روزرسانی وب‌سایت"
+  }
 }
